--- a/package.json
+++ b/package.json
@@ -16,21 +16,20 @@
     "directories": {
       "output": "dist"
     },
-  "files": [
+    "files": [
       "main.js",
       "preload.js",
       "renderer/**/*",
-      "assets/**/*",
-      "!**/*.map"
+      "assets/**/*"
     ],
     "extraResources": [
       {
-        "from": "assets/",
-        "to": "assets/",
-        "filter": [
-          "**/*",
-          "!.DS_Store" 
-        ]
+        "from": "renderer",
+        "to": "app/renderer"
+      },
+      {
+        "from": "assets",
+        "to": "assets"
       }
     ],
     "mac": {
